--- a/makefile.intel
+++ b/makefile.intel
@@ -1,27 +1,25 @@
 
-# PETSC_INC=-I${PETSC_DIR}/include -I${PETSC_DIR}/${PETSC_ARCH}/include
-# PETSC_LIB=-L${PETSC_DIR}/${PETSC_ARCH}/lib
+PETSC_INC=-I${PETSC_DIR}/include -I${PETSC_DIR}/${PETSC_ARCH}/include
+PETSC_LIB=-L${PETSC_DIR}/${PETSC_ARCH}/lib
 
 SRCDIR           = ./src/
 OBJDIR           = ./lib/
 BINDIR           = ./bin/
 
-EXT_LIB = -L${EXT_PATH}/lib64/
-JIT_LIB = ${EXT_PATH}/lib64/
-
 EXE              = pom2k
-FC	         = mpif90
-FLINKER          = mpif90 
+FC	         = mpiifort -O2
+FLINKER          = mpiifort -O2
 CFLAGS	         =
-FFLAGS	         =-Wno-tabs -I ${EXT_PATH}/include \
-		  -J ${OBJDIR} -I ${OPEN_ARRAY} -g \
-		 -fbacktrace -ffree-line-length-0 
+FFLAGS	         =-I ${PNETCDF}/include \
+		   -I ${OPEN_ARRAY} 
+
 CPPFLAGS         =
 FPPFLAGS         =
 CLEANFILES       = pom2k *.o *.mod *.nc
 NP               = 1
 
-OOO              = \
+OBJ		 = ${addprefix ${OBJDIR}/, \
+		input.o variables.o init_fields.o \
 		print_section.o read_var.o \
 		dens.o baropg.o bottom_friction.o lateral_bc.o \
 		get_time.o advct.o advt2.o lateral_viscosity.o \
@@ -34,36 +32,32 @@ OOO              = \
 		internal_v.o internal_w.o \
 		internal_update.o \
 		surface_forcing.o update_initial.o \
-		oa_kernels.o
-
-
-
-OBJ		 = ${addprefix ${OBJDIR}/, config.o \
-		variables.o dens.o read_init.o  \
-		init_fields.o  pom2k.o}
+		read_init.o oa_kernels.o pom2k.o}
 
 OBJMAIN	= ${OBJ}
+
+#include ${PETSC_DIR}/lib/petsc/conf/variables
+#include ${PETSC_DIR}/lib/petsc/conf/rules
+
 
 .DEFAULT_GOAL := all
 
 all :
 	@./fypp1 -p  -m re -m string -m io -m os --create-parents \
 	src/oa_kernels.fypp src/oa_kernels.F90
-	@make main
+	@make main -f makefile.intel
 
 
 ${OBJDIR}/%.o: ${SRCDIR}/%.F90
 	-${FC} ${FFLAGS} -c -o $@ $<
 
-
 %.o: %.mod
 
 main : ${OBJ}
-	-${FLINKER} -o ${BINDIR}/pom2k ${OBJ} \
-	-lpnetcdf ${EXT_LIB} \
-	-I ${OPEN_ARRAY} -L${OPEN_ARRAY} \
-	-lopenarray -lm -ldl -lstdc++ \
-	-lboost_program_options -lboost_system -ljit 
+	-${FLINKER} ${OBJ}  ${PETSC_KSP_LIB} \
+	${PETSC_LIB} -I ${OPEN_ARRAY} ${OPEN_ARRAY}/libopenarray.a \
+	${PNETCDF}/lib/libpnetcdf.a \
+	-o ${BINDIR}/pom2k  -lpetsc 
 
 run : main
 	-cd ./bin && ./pom2k
@@ -74,7 +68,7 @@ run4 : main
 run2 : main
 	-cd ./bin && mpirun -np 2 ./pom2k
 oalib :
-	-cd ../../OpenArray/ && make oalib
+	-cd ../../OpenArray/ && make oalib -f makefile.intel
 clean ::
 	-rm lib/*.o
 	-rm bin/${EXE}
