modified Makefile.am and configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -88,7 +88,7 @@ AS_IF([test "x$OPEN_ARRAY" != x], [APPEND_SEARCH_PATH([$OPEN_ARRAY])], [])
 
 AC_SUBST(MPI_DIR)
 AC_SUBST(PNETCDF_DIR)
-AC_SUBST(OPEN_ARRY)
+AC_SUBST(OPEN_ARRAY)
 
 AC_PROG_RANLIB
 AC_CONFIG_FILES([Makefile])
