change OPEN_ARRAY into OPENARRAY_DIR

--- a/Makefile.in
+++ b/Makefile.in
@@ -237,7 +237,7 @@ MPIF90 = @MPIF90@
 MPI_DIR = @MPI_DIR@
 NPROC_PROG = @NPROC_PROG@
 OBJEXT = @OBJEXT@
-OPEN_ARRAY = @OPEN_ARRAY@
+OPENARRAY_DIR = @OPENARRAY_DIR@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
 PACKAGE_NAME = @PACKAGE_NAME@
